feat (commands): Echo, Ping, Math, Clima

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/santos-jp7/yettz#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "save": "^2.4.0"
