--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.19.2",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "ytdl-getinfo": "^1.1.0"
   }
 }
