feat: start on package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bot para Discord.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "node teste.js"
   },
   "repository": {
