--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
   },
   "homepage": "https://github.com/santos-jp7/yettz#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "axios": "^0.19.2",
-    "discord.js": "^11.5.1",
+    "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
     "mongoose": "^5.9.20",
     "save": "^2.4.0",
-    "ytdl-getinfo": "^1.1.0"
+    "spotify-web-api-node": "^4.0.0",
+    "ytdl": "^1.3.5",
+    "ytdl-core": "^3.3.0",
+    "ytdl-getinfo": "^1.1.0",
+    "ytpl": "^1.0.1",
+    "ytsr": "^1.0.1"
   }
 }
